--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -73,6 +73,23 @@
             </div>
           </div>
 
+
+          <% if @payment_link.present? %>
+            <div class="mt-8">
+              <h2 class="text-sm font-medium text-gray-900">Your affiliate link</h2>
+
+              <div class="mt-4 prose prose-sm text-gray-500">
+                <p><%= @payment_link.url %></p>
+              </div>
+            </div>
+          <% else %>
+            <form action="/payment_links" method="post">
+              <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+              <input type="hidden" name="price" value="<%= @price.id %>">
+              <button class="mt-8 w-full bg-blue-400 border rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-color">Sell</button>
+            </form>
+          <% end %>
+
           <% if @price.product.metadata.keys.include?(:buy_url) %>
             <a href="<%= @price.product.metadata&.buy_url %>" target="_blank" class="mt-8 w-full bg-blue-400 border rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-color">Buy</a>
           <% end %>
